syntax = "proto3";
package basekv;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.proto";
option optimize_for = SPEED;

message KVRangeId{
  uint64 epoch = 1;
  uint64 id = 2;
}

message Boundary{
  optional bytes startKey = 1; // the inclusive lower bound of the boundary if present, or it's a left open boundary
  optional bytes endKey = 2;   // the exclusive upper bound of the boundary if present, or it's a right open boundary
}
